# Spark_Server

./: .clang-format  CMakeLists.txt  README.MD
include/: Client.hpp  ClientsHandler.hpp  ListenerHandler.hpp  MainServer.hpp  Server.hpp  ServersHandler.hpp
include/Core/: Client.hpp  ClientsDB.hpp  Server.hpp  ServersDB.hpp
include/Handlers/: ConsoleHandler.hpp
include/Utils/: Config.hpp  Utils.hpp  Utils.inl
src/: Client.cpp  ClientsHandler.cpp  ListenerHandler.cpp  Main.cpp  MainServer.cpp  Server.cpp  ServersHandler.cpp
src/Core/: Client.cpp  ClientsDB.cpp  Server.cpp  ServersDB.cpp
src/Handlers/: ConsoleHandler.cpp
